[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/sword hero.png" type="Texture" id=1]
[ext_resource path="res://UI Scenes/PlayerUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Battlers/Player.gd" type="Script" id=3]
[ext_resource path="res://Battlers/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/base_theme.tres" type="Theme" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "deal_damage"
}, {
"args": [  ],
"method": "finish_turn"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 37, 38, 37 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -31 ), Vector2( -4, -31 ), Vector2( 0, -31 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -31 ) ]
}

[node name="Player" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -31 )
hframes = 46
frame = 11

[node name="Label" type="Label" parent="Sprite"]
margin_left = -26.0
margin_top = -53.0
margin_right = 14.0
margin_bottom = -39.0
theme = ExtResource( 5 )
text = "10/10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 1 )
anims/Hurt = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
maxHealth = 10.0
attackPower = 3.0

[node name="PlayerUICanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerUI" parent="PlayerUICanvasLayer" instance=ExtResource( 2 )]
visible = false

[connection signal="health_changed" from="Stats" to="." method="_on_Stats_health_changed"]
[connection signal="pressed" from="PlayerUICanvasLayer/PlayerUI/PanelContainer/HBoxContainer/AttackOne" to="." method="_on_AttackOne_pressed"]
[connection signal="pressed" from="PlayerUICanvasLayer/PlayerUI/PanelContainer/HBoxContainer/AttackTwo" to="." method="_on_AttackTwo_pressed"]

[editable path="PlayerUICanvasLayer/PlayerUI"]
